# agentic-gpt5-github

./: README.md  logs.txt  pyproject.toml
src/agentic_github/: apply_patch.py  coding_assistant.py  config.py  main.py  runeditmanager.py  runmanager.py  shellmanager.py
