[project]
name = "agentic-gpt5-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "openai>=2.9.0",
    "openai-agents>=0.6.2",
]

[project.scripts]
agent = "agentic_github.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/agentic_github"]